[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "sphinx-jinja2-compat"
version = "0.0.0"
description = "Patches Jinja2 v3 to restore compatibility with earlier Sphinx versions."
readme = "README.rst"
keywords = [ "documentation", "jinja2", "sphinx",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-jinja2-compat"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-jinja2-compat/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-jinja2-compat"

[tool.mkrecipe]
conda-channels = [ "conda-forge", "domdfcoding",]
extras = "all"

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9", "3.10", "3.11",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"
package = "sphinx_jinja2_compat"

[tool.importcheck]

[tool.mypy]
python_version = "3.6"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
